kustomize-disabled/2048/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2048-kuz
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048-kuz
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048-kuz
    spec:
      containers:
        - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
          name: app-2048-kuz
          ports:
            - containerPort: 80
              name: http
